# Anvimator

./: Cargo.toml  README.md
batch/: Cargo.toml
core/: Cargo.toml
core/src/: color.rs  lib.rs
interactive/: Cargo.toml
interactive/src/: main.rs
rendering/: Cargo.toml
rendering/src/: color.rs  lib.rs  state.rs
src/: main.rs
