[package]
name = "rendering"
version = "0.1.0"
authors = ["Tim Harding <Tim@TimHarding.co>"]
edition = "2018"

[dependencies]
wgpu = "0.6"
wgpu_glyph = "0.10"
raw-window-handle = "0.3"
anyhow = "1.0"
thiserror = "1.0"
syntect = { version = "4.5", default-features = false, features = ["default-fancy"]}